Introduction - Pipeline and Libraries

--- a/Lessons/1-Introduction/presentation/references.bib
+++ b/Lessons/1-Introduction/presentation/references.bib
@@ -4,3 +4,10 @@
   url = {https://towardsdatascience.com/gradient-descent-algorithm-a-deep-dive-cf04e8115f21},
   year = {2020}
 }
+
+@misc{geeksforgeeksfitting,
+  author = {GeeksforGeeks},
+  title = {Underfitting and Overfitting in Machine Learning},
+  url = {https://www.geeksforgeeks.org/underfitting-and-overfitting-in-machine-learning/},
+  year = {2024}
+}
