--- a/Lessons/1-Introduction/presentation/part_1_-_introduction.qmd
+++ b/Lessons/1-Introduction/presentation/part_1_-_introduction.qmd
@@ -12,8 +12,6 @@ format:
     slideHeaders: true
     # theme: [default, _extensions/grantmcdermott/clean/clean.scss]
     smaller: true
-    # scrollable: true
-    theme: simple
     slide-number: true
     show-slide-number: all
     css: [styles.css]
@@ -21,8 +19,8 @@ format:
     code-line-numbers: false
     header: "Introduction to Machine Learning"
     sc-sb-title	: true
+    incremental: true
     embed-resources: true
-    incremental: false
 execute: 
   echo: true
 filters:
@@ -548,7 +546,7 @@ Multiple sources of issues and steps to perform:
 
 ### Why normalization?
 
-:::{example-block}
+:::{.example-block}
 Idea
 
 *A priori* all features have the same importance, so none of them should have an advantage. Therefore, having features with larger values than others would be detrimental.
@@ -583,17 +581,36 @@ $$
   - Training the model one or multiple times
   - Determining the best hyperpatameters
 
-### Model evaluation
+### Model evaluation - Criteria
 
-- Criteria selection among the many possible ones:
-  - For classification: Accuracy, Precision, Recall, F1-Score...
-  - For regression: Mean Absolute Error, Mean Square Error (MSE)...
+Criteria selection among the many possible ones:
+
+::: {.fragment .nonincremental}
+- For classification:
+  - Accuracy: for balanced datasets
+  - Precision: when false positives are costly
+  - Recall: when false negatives are costly
+  - F1-Score: when class distribution is unbalanced
   - ...
-- **Cross-validation** to estimate real performance of the model:
-  1. Split the dataset in multiple parts (usually 5)
-  2. Using different combinations of these parts (usually 5), train and evaluate the model
+:::
+::: {.fragment .nonincremental}
+- For regression:
+  - Mean Absolute Error (MAE)
+  - Mean Square Error (MSE): more sensitive to large errors than MAE
+  - ...
+:::
 
-![Cross-validation^[By Gufosowa - Own work, CC BY-SA 4.0, https://commons.wikimedia.org/w/index.php?curid=82298768]](https://en.wikipedia.org/wiki/Cross-validation_(statistics)#/media/File:K-fold_cross_validation_EN.svg)
+### Model evaluation - Cross-validation
+
+::: {.definition-block}
+Cross-validation
+
+Method to estimate real performance of the model by:
+  1. Splitting the dataset in multiple parts (usually 5)
+  2. For different combinations of these parts (usually 5), training and evaluating the model
+:::
+
+![Cross-validation^[By Gufosowa - Own work, CC BY-SA 4.0, https://commons.wikimedia.org/w/index.php?curid=82298768]](images/K-fold_cross_validation_EN.svg)
 
 ### Final model training
 
@@ -601,25 +618,59 @@ Once the data is preprocessed, the model is selected, the hyperparameters chosen
 
 # Challenges
 
-### Data
+## Data
 
 - Quality
 - Diversity
 - Biases and fairness (example of crime prediction)
 
-### Underfitting and Overfitting
+::: {.fragment .example-block}
+Biases and fairness
 
-- Cross-validation
-- Feature selection
-- Regularization
-- Ensemble methods
-- Model complexity (increase if high bias and reduce if high variance)
-- Early stopping (overfitting)
-- Training data size (underfitting)
+Model architecture, training and evaluation also plays a major role in preventing biases, and can sometimes allow to build unbiased models using biased data.
+:::
 
-### Bias and variance (stability)
+## Underfitting and Overfitting
 
-### Interpretable and Explainable
+### Definitions
+
+::: {.fragment .definition-block}
+Underfitting
+
+When a model is too simple to properly extract information from a complex task. Can also be explained by key information missing in the input features.
+:::
+
+::: {.fragment .definition-block}
+Overfitting
+
+When a model is too complex to properly generalize to new data. Happens often when a NN is trained too long on a dataset that is not diverse enough and learns the noise in the data.
+:::
+
+### Illustrations
+
+![Underfitting and overfitting on a regression task [@geeksforgeeksfitting]](images/Underfitting_and_Overfitting_Regression.webp){width="550px"}
+
+![Underfitting and overfitting on a classification task [@geeksforgeeksfitting]](images/Underfitting_and_Overfitting_Classification.png){width="550px"}
+
+
+### Solutions
+
+| Solution | Underfitting | Overfitting |
+| -------- | ------------ | ----------- |
+| Complexity | Increase | Reduce |
+| Number of features | Increase | Reduce |
+| Regularization | Reduce | Increase |
+| Training time | Increase | Reduce |
+
+::: {.fragment}
+General strategies:
+
+- Cross-validation to identify problems
+- Grid search/random search to tune hyperparameters and balance between underfitting and overfitting
+- Ensemble methods to reduce overfitting by using many smaller models instead of one big
+:::
+
+## Interpretable and Explainable
 
 ### Definitions
 
@@ -632,13 +683,8 @@ Qualifies a ML model which decision-making process is straightforward and **tran
 ::: {.definition-block}
 Explainable
 
-Qualifies a ML model which decision-making process can be partly interpreted afterwards using **post hoc interpretation techniques**. 
+Qualifies a ML model which decision-making process can be partly interpreted afterwards using **post hoc interpretation techniques**. These techniques are often used on models which are too complex to be interpreted.
 :::
-
-### Examples
-
-- Example of the model detecting fishes using human hands
-- Depends a lot on the technique that is used
 
 # Python libraries
 
@@ -661,48 +707,32 @@ Qualifies a ML model which decision-making process can be partly interpreted aft
 
 ### NumPy
 
-::: {.fragment}
 ```{python}
 import numpy as np
 ```
-:::
-::: {.fragment}
 ```{python}
 array = np.array([[0, 1], [2, 3]])
 print(array)
 ```
-:::
-::: {.fragment}
 ```{python}
 print(5 * array)
 ```
-:::
-::: {.fragment}
 ```{python}
 print(np.pow(array, 3))
 ```
-:::
-::: {.fragment}
 ```{python}
 print(array @ array)
 ```
-:::
-::: {.fragment}
 ```{python}
 print(np.where(array < 2, 10 - array, array))
 ```
-:::
 
 ### Pandas
 
-::: {.fragment}
 ```{python}
 import pandas as pd
 import numpy.random as npr
 ```
-:::
-
-::: {.fragment}
 ```{python}
 df = pd.DataFrame([
     ["Pi", 3.14159, npr.randint(-100, 101, (2, 2))],
@@ -711,26 +741,83 @@ df = pd.DataFrame([
   ], columns = ["Names", "Values", "Random numbers because why not"])
 print(df)
 ```
-:::
-
-::: {.fragment}
 ```{python}
 print(df[df["Values"] > 2])
 ```
-:::
-
-::: {.fragment}
 ```{python}
 print(df[df["Names"].str.contains("n")])
 ```
-:::
 
 ## ML
 
-- [SciPy](https://scipy.org/)
-- [scikit-learn](https://scikit-learn.org/stable/index.html)
+### SciPy
+
+Scientific and technical computing based on NumPy. Documentation [here](https://scipy.org/)
+
+```{python}
+import scipy as sp
+import numpy as np
+```
+```{python}
+# Define a linear system Ax = b
+A = np.array([[3, 2], [1, 4]])
+b = np.array([6, 8])
+
+# Solve the system
+x = sp.linalg.solve(A, b)
+print("Solution to the linear system Ax = b:", x)
+```
+```{python}
+# Define a function to integrate
+def integrand(x):
+    return np.exp(-x**2/2)/np.sqrt(2*np.pi)
+
+# Integrate the function from 0 to infinity
+result, error = sp.integrate.quad(integrand, 0, np.inf)
+print("Integral of exp(-x**2/2)/sqrt(2*np.pi) from 0 to infinity:", result)
+```
+
+### scikit-learn
+
+Documentation [here](https://scikit-learn.org/stable/index.html)
+
+```{python}
+import numpy as np
+from sklearn.linear_model import LinearRegression
+from sklearn.datasets import make_regression, load_iris
+from sklearn.model_selection import train_test_split
+from sklearn.ensemble import RandomForestClassifier
+from sklearn.metrics import accuracy_score
+```
+```{python}
+# Generate data, create and fit a Linear Regression model
+X, y = make_regression(n_samples=100, n_features=1, noise=0.1)
+model = LinearRegression()
+model.fit(X, y)
+
+print("Coefficient:", model.coef_, "Intercept:", model.intercept_)
+```
+```{python}
+# Load the iris dataset and split it in training and test
+iris = load_iris()
+X, y = iris.data, iris.target
+X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)
+
+# Create and fit a random forest classifier on training data, and use it
+clf = RandomForestClassifier()
+clf.fit(X_train, y_train)
+y_pred = clf.predict(X_test)
+
+print("Accuracy:", accuracy_score(y_test, y_pred))
+```
 
 ## NN
+
+### PyTorch
+
+### TensorFlow
+
+### Keras
 
 - [PyTorch](https://pytorch.org/)
 - [TensorFlow](https://www.tensorflow.org/)
@@ -738,9 +825,17 @@ print(df[df["Names"].str.contains("n")])
 
 ## Visualization
 
-- [Matplotlib](https://matplotlib.org/)
-- [Plotly](https://plotly.com/python/)
-- [Seaborn](https://seaborn.pydata.org/index.html)
+### Matplotlib
+
+<iframe class="full" src="https://matplotlib.org/stable/plot_types/index.html#plot-types"></iframe>
+
+### Plotly
+
+<iframe class="full" src="https://plotly.com/python/"></iframe>
+
+### Seaborn
+
+<iframe class="full" src="https://seaborn.pydata.org/examples/index.html"></iframe>
 
 # Resources
 
